@@ -1,0 +1,29 @@
+/**
+ * 
+ */
+package com.teaminabox.eclipse.wiki.editors;
+
+import org.eclipse.jdt.core.IProblemRequestor;
+import org.eclipse.jdt.core.compiler.IProblem;
+
+class NullProblemRequestor implements IProblemRequestor {
+	public void acceptProblem(IProblem problem) {
+		// TODO Auto-generated method stub
+	
+	}
+
+	public void beginReporting() {
+		// TODO Auto-generated method stub
+	
+	}
+
+	public void endReporting() {
+		// TODO Auto-generated method stub
+	
+	}
+
+	public boolean isActive() {
+		// TODO Auto-generated method stub
+		return false;
+	}
+}
